k8s/club/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: club-${ENV}-service
spec:
  selector:
    app: club
    env: ${ENV}
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
