k8s/club/ingress-test.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pedantic-orderliness-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-registry
spec:
  rules:
  - host: test.pedanticorderliness.com
    http:
      paths:
      - backend:
          serviceName: pedantic-orderliness-test-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - test.pedanticorderliness.com
    secretName: pedantic-orderliness-test
